--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=8000
-DATABASE=mongodb+srv://lgnjenga:l@g@njenga247@jobportaldb.klwps.mongodb.net/?retryWrites=true&w=majority&appName=jobportaldb
+DATABASE=mongodb+srv://lgnjenga:123@jobportaldb.klwps.mongodb.net/?retryWrites=true&w=majority&appName=jobportaldb
